# client-py

./: CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
donglora/: __init__.py  _top_level.py  client.py  codec.py  commands.py  connect.py  crc.py  discovery.py  dongle.py  errors.py  events.py  frame.py  info.py  modulation.py  protocol.py  session.py  transport.py
tests/: test_client.py  test_codec.py  test_connect.py  test_crc.py  test_dongle.py  test_ergonomics.py  test_events.py  test_frame.py  test_modulation.py  test_protocol.py  test_session.py
